--- a/index.html
+++ b/index.html
@@ -20,10 +20,26 @@
         <div class="text">
             <h3>Ithaca High School</h3>
             <h2>SOCIAL JUSTICE WEEK</h2>
-            <a href="#" class="button">Learn More</a>
+            <a href="#about" class="button">Learn More</a>
         </div>
+        <div class="img"></div>
     </div>
-    <section></section>
+    <section id="about">
+        <div class="img"></div>
+        <div class="text">
+            <h3>About Social Justice Week</h3>
+            <div class="hr"></div>
+            <p>During Social Justice Week, IHS and community speakers come together to educate and empower students about various topics relating to social justice; local, national, and worldwide. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum aperiam molestias quisquam iusto expedita dolores cumque.</p>
+        </div>
+    </section>
+    <section id="schedule">
+        <div class="text">
+            <h3>2020 Schedule</h3>
+            <div class="hr"></div>
+            <p>Social Justice Week will be from MM/DD to MM/DD this year. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro vitae illum corrupti recusandae ipsa quaerat numquam, ea maxime soluta atque aliquam fuga, eaque minus, consectetur quis aspernatur? Iste, recusandae accusamus.</p>
+            <a href="#about" class="button">View Schedule</a>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="js/script.js"></script>
 </body>
