--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IHS Social Justice Week</title>
     <link rel="stylesheet" href="https://use.typekit.net/qfk0chr.css">
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
     <div class="hero">
         <div class="text">
             <h3>Ithaca High School</h3>
-            <h2>SOCIAL JUSTICE WEEK</h2>
+            <h2>Social Justice Week</h2>
             <a href="#about" class="button">Learn More</a>
         </div>
         <div class="img"></div>
