--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
     <div class="hero">
         <div class="text">
-            <h3>Ithaca High School</h3>
-            <h2>Social Justice Week</h2>
+            <h2>Ithaca High School Social Justice Week</h2>
+            <p>During Social Justice Week, IHS and community speakers come together to educate and empower students about various topics relating to social justice; local, national, and worldwide.</p>
             <a href="#about" class="button">Learn More</a>
         </div>
         <div class="img"></div>
@@ -30,7 +30,7 @@
         <div class="text">
             <h3>About Social Justice Week</h3>
             <div class="hr"></div>
-            <p>During Social Justice Week, IHS and community speakers come together to educate and empower students about various topics relating to social justice; local, national, and worldwide. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum aperiam molestias quisquam iusto expedita dolores cumque.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates veniam atque dolor quas similique repellat sunt delectus, sequi doloremque accusamus quos recusandae pariatur molestias labore culpa exercitationem ipsam modi velit.</p>
         </div>
     </section>
     <section id="schedule">
