--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/qfk0chr.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <img id="cursor" src="img/cursorLight.svg" alt="">
     <div id="header">
         <a href="index.html" class="logo"><img src="img/logo.svg" alt=""></a>
         <ul class="links">
-            <a class="link" href="#">Schedule</a>
-            <a class="link" href="#">Videos</a>
+            <a class="link" href="schedule.html">Schedule</a>
+            <a class="link" href="videos.html">Videos</a>
         </ul>
     </div>
     <div class="hero">
@@ -28,7 +29,7 @@
     <section id="about">
         <div class="img"></div>
         <div class="text">
-            <h3>About Social Justice Week</h3>
+            <h4>About Social Justice Week</h4>
             <div class="hr"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates veniam atque dolor quas similique repellat sunt delectus, sequi doloremque accusamus quos recusandae pariatur molestias labore culpa exercitationem ipsam modi velit.</p>
         </div>
@@ -38,9 +39,22 @@
             <h3>2020 Schedule</h3>
             <div class="hr"></div>
             <p>Social Justice Week will be from MM/DD to MM/DD this year. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro vitae illum corrupti recusandae ipsa quaerat numquam, ea maxime soluta atque aliquam fuga, eaque minus, consectetur quis aspernatur? Iste, recusandae accusamus.</p>
-            <a href="#about" class="button">View Schedule</a>
+            <a href="schedule.html" class="button">Go to Schedule</a>
         </div>
     </section>
+    <section id="videos">
+        <div class="text">
+            <h3>Videos</h3>
+            <div class="hr"></div>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro vitae illum corrupti recusandae ipsa quaerat numquam, ea maxime soluta atque aliquam fuga, eaque minus, consectetur quis aspernatur? Iste, recusandae accusamus.</p>
+            <a href="videos.html" class="button">Go to Videos</a>
+        </div>
+    </section>
+    <footer>
+        <p>Copyright © IHS Social Justice Week Club 2020</p>
+        <p>Advisor: <a href="mailto:kmelland@icsd.k12.ny.us" target="_blank">Mr. Mellander</a></p>        
+    </footer>
+    <a href="#" id="top">Menu &#8593;</a>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="js/script.js"></script>
 </body>
