--- a/index.html
+++ b/index.html
@@ -1,4 +1,27 @@
 <!DOCTYPE html>
+
+<!-- 
+
+    ."".    ."",
+    |  |   /  /
+    |  |  /  /
+    |  | /  /
+    |  |/  ;-._ 
+    }  ` _/  / ;
+    |  /` ) /  /
+    | /  /_/\_/\
+    |/  /      |
+    (  ' \ '-  |
+     \    `.  /
+      |      |
+      |      |
+
+    
+    Made by Jacob Yoon.
+    jacobyoon.cf
+
+-->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -51,7 +74,7 @@
         </div>
     </section>
     <footer>
-        <p>Copyright © IHS Social Justice Week Club 2020</p>
+        <p>© 2020 IHS Social Justice Week Club</p>
         <p>Advisor: <a href="mailto:kmelland@icsd.k12.ny.us" target="_blank">Mr. Mellander</a></p>        
     </footer>
     <a href="#" id="top">Menu &#8593;</a>
