--- a/videos.html
+++ b/videos.html
@@ -26,7 +26,7 @@
         <div class="img"></div>
     </div>
     <footer>
-        <p>Copyright © IHS Social Justice Week Club 2020</p>
+        <p>© 2020 IHS Social Justice Week Club</p>
         <p>Advisor: <a href="mailto:kmelland@icsd.k12.ny.us" target="_blank">Mr. Mellander</a></p>        
     </footer>
     <a href="#" id="top">Menu &#8593;</a>
